[package]
name = "etl-ch-destination"
version = "0.1.0"
edition = "2024"

[dependencies]
etl = { git = "https://github.com/supabase/etl" }
clickhouse-arrow = { version = "0.2.1", default-features = false }
anyhow = "1.0.100"
chrono = { version = "0.4.43", default-features = false }
futures-util = "0.3.31"
serde_json = "1.0.149"
tracing = "0.1.44"
tokio = { version = "1.49.0", default-features = false, features = ["rt"] }
serde = { version = "1.0.228", optional = true }

[features]
default = []
serde = ["dep:serde"]
